instructions.InstructionsDrawG.scala.error
Compilation error:
InstructionsDrawG:25: error: not found: value BrushUp
BrushUp()
^