instructions.InstructionsDrawG.scala.code
right()
brushDown()
backward()
backward() 
backward()
backward()

left()
backward()
backward()
backward()
backward()

left()
backward()
backward()
backward()
backward()
right()
forward()
forward()
right()
backward()
left()
BrushUp()
left()
backward()
backward()
left()
forward()
forward()
left()
forward()
forward()
forward()
forward()
right()
